# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-10-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix shutdown issue with service restarts and cloudi_pool errors

2013-10-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix a potential inconsistency between the CloudI repo and the
      cloudi_core repo (with CLOUDI_CORE_STANDALONE defined) by changing the
      {cpg_data, Groups} message in cpg to {cloudi_cpg_data, Groups}
    * Add proplist service configuration format

2013-10-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Split cloudi_core and the internal services into separate respositories
      (at https://github.com/CloudI/)
    * Update jinterface from R16B02
    * Update older database driver repository links
    * Update READMEs with the new repository location
    * Provide a function for updating the destination refresh lookup data
      in the cloudi module, so lazy destination refresh methods can be used

2013-10-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.3.0 (beta) released
    * Update cpg, key2value, pqueue, reltool_util, uuid after version bump

2013-10-17 Mahesh Paolini-Subramanya   <mahesh [at] dieswaytoofast (dot) com>

    * Migrate elasticsearch version from 1.3 to 1.4
    * Added support for mapping and aliases

2013-10-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Dialyzer fixes, turn all dialyzer warnings on
    * Update reltool_util

2013-10-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the cloudi_service:mcast_async_active function variations along with
      cloudi_service:mcast_async_passive functions to mirror what is already
      available for cloudi_service:send_async
    * Add cloudi_service_quorum for seeking quorum among running services
      for a service request

2013-10-11 Michael Truog   <mjtruog [at] gmail (dot) com>
