@@ -728,7 +728,16 @@ services_format_options_internal(Options) ->
         true ->
             OptionsList7
     end,
-    lists:reverse(OptionsList8).
+    OptionsList9 = if
+        Options#config_service_options.automatic_loading /=
+        Defaults#config_service_options.automatic_loading ->
+            [{automatic_loading,
+              Options#config_service_options.automatic_loading} |
+             OptionsList8];
+        true ->
+            OptionsList8
+    end,
+    lists:reverse(OptionsList9).
 
 services_format_options_external(Options) ->
     Defaults = #config_service_options{},
@@ -1222,110 +1231,118 @@ services_validate_options_internal(OptionsList) ->
         {hibernate,
          Options#config_service_options.hibernate},
         {reload,
-         Options#config_service_options.reload}],
+         Options#config_service_options.reload},
+        {automatic_loading,
+         Options#config_service_options.automatic_loading}],
     case cloudi_proplists:take_values(Defaults, OptionsList) of
-        [PriorityDefault, _, _, _, _, _, _, _, _, _, _, _, _, _]
+        [PriorityDefault, _, _, _,
+         _, _, _, _, _, _, _, _, _, _, _]
         when not ((PriorityDefault >= ?PRIORITY_HIGH) andalso
                   (PriorityDefault =< ?PRIORITY_LOW)) ->
             {error, {service_options_priority_default_invalid,
                      PriorityDefault}};
         [_, QueueLimit, _, _, _, _, _,
-         _, _, _, _, _, _, _, _, _, _]
+         _, _, _, _, _, _, _, _, _, _, _]
         when not ((QueueLimit =:= undefined) orelse
                   (is_integer(QueueLimit) andalso
                    (QueueLimit >= 1))) ->
             {error, {service_options_queue_limit_invalid,
                      QueueLimit}};
         [_, _, DestRefreshStart, _, _, _, _,
-         _, _, _, _, _, _, _, _, _, _]
+         _, _, _, _, _, _, _, _, _, _, _]
         when not (is_integer(DestRefreshStart) andalso
                   (DestRefreshStart > ?TIMEOUT_DELTA)) ->
             {error, {service_options_dest_refresh_start_invalid,
                      DestRefreshStart}};
         [_, _, _, DestRefreshDelay, _, _, _,
-         _, _, _, _, _, _, _, _, _, _]
+         _, _, _, _, _, _, _, _, _, _, _]
         when not (is_integer(DestRefreshDelay) andalso
                   (DestRefreshDelay > ?TIMEOUT_DELTA)) ->
             {error, {service_options_dest_refresh_delay_invalid,
                      DestRefreshDelay}};
         [_, _, _, _, RequestTimeoutAdjustment, _, _,
-         _, _, _, _, _, _, _, _, _, _]
+         _, _, _, _, _, _, _, _, _, _, _]
         when not is_boolean(RequestTimeoutAdjustment) ->
             {error, {service_options_request_timeout_adjustment_invalid,
                      RequestTimeoutAdjustment}};
         [_, _, _, _, _, ResponseTimeoutAdjustment, _,
-         _, _, _, _, _, _, _, _, _, _]
+         _, _, _, _, _, _, _, _, _, _, _]
         when not is_boolean(ResponseTimeoutAdjustment) ->
             {error, {service_options_response_timeout_adjustment_invalid,
                      ResponseTimeoutAdjustment}};
         [_, _, _, _, _, _, Scope,
-         _, _, _, _, _, _, _, _, _, _]
+         _, _, _, _, _, _, _, _, _, _, _]
         when not is_atom(Scope) ->
             {error, {service_options_scope_invalid,
                      Scope}};
         [_, _, _, _, _, _, _,
-         MonkeyLatency, _, _, _, _, _, _, _, _, _]
+         MonkeyLatency, _, _, _, _, _, _, _, _, _, _]
         when not ((MonkeyLatency =:= false) orelse
                   (MonkeyLatency =:= system) orelse
                   is_list(MonkeyLatency)) ->
             {error, {service_options_monkey_latency_invalid,
                      MonkeyLatency}};
         [_, _, _, _, _, _, _,
-         _, MonkeyChaos, _, _, _, _, _, _, _, _]
+         _, MonkeyChaos, _, _, _, _, _, _, _, _, _]
         when not ((MonkeyChaos =:= false) orelse
                   (MonkeyChaos =:= system) orelse
                   is_list(MonkeyChaos)) ->
             {error, {service_options_monkey_chaos_invalid,
                      MonkeyChaos}};
         [_, _, _, _, _, _, _,
-         _, _, ApplicationName, _, _, _, _, _, _, _]
+         _, _, ApplicationName, _, _, _, _, _, _, _, _]
         when not is_atom(ApplicationName) ->
             {error, {service_options_application_name_invalid,
                      ApplicationName}};
         [_, _, _, _, _, _, _,
-         _, _, _, RequestPidUses, _, _, _, _, _, _]
+         _, _, _, RequestPidUses, _, _, _, _, _, _, _]
         when not ((RequestPidUses =:= infinity) orelse
                   (is_integer(RequestPidUses) andalso
                    (RequestPidUses >= 1))) ->
             {error, {service_options_request_pid_uses_invalid,
                      RequestPidUses}};
         [_, _, _, _, _, _, _,
-         _, _, _, _, RequestPidOptions, _, _, _, _, _]
+         _, _, _, _, RequestPidOptions, _, _, _, _, _, _]
         when not is_list(RequestPidOptions) ->
             {error, {service_options_request_pid_options_invalid,
                      RequestPidOptions}};
         [_, _, _, _, _, _, _,
-         _, _, _, _, _, InfoPidUses, _, _, _, _]
+         _, _, _, _, _, InfoPidUses, _, _, _, _, _]
         when not ((InfoPidUses =:= infinity) orelse
                   (is_integer(InfoPidUses) andalso
                    (InfoPidUses >= 1))) ->
             {error, {service_options_info_pid_uses_invalid,
                      InfoPidUses}};
         [_, _, _, _, _, _, _,
-         _, _, _, _, _, _, InfoPidOptions, _, _, _]
+         _, _, _, _, _, _, InfoPidOptions, _, _, _, _]
         when not is_list(InfoPidOptions) ->
             {error, {service_options_info_pid_options_invalid,
                      InfoPidOptions}};
         [_, _, _, _, _, _, _,
-         _, _, _, _, _, _, _, DuoMode, _, _]
+         _, _, _, _, _, _, _, DuoMode, _, _, _]
         when not is_boolean(DuoMode) ->
             {error, {service_options_duo_mode_invalid,
                      DuoMode}};
         [_, _, _, _, _, _, _,
-         _, _, _, _, _, _, _, _, Hibernate, _]
+         _, _, _, _, _, _, _, _, Hibernate, _, _]
         when not is_boolean(Hibernate) ->
             {error, {service_options_hibernate_invalid,
                      Hibernate}};
         [_, _, _, _, _, _, _,
-         _, _, _, _, _, _, _, _, _, Reload]
+         _, _, _, _, _, _, _, _, _, Reload, _]
         when not is_boolean(Reload) ->
             {error, {service_options_reload_invalid,
                      Reload}};
+        [_, _, _, _, _, _, _,
+         _, _, _, _, _, _, _, _, _, _, AutomaticLoading]
+        when not is_boolean(AutomaticLoading) ->
+            {error, {service_options_automatic_loading_invalid,
+                     AutomaticLoading}};
         [PriorityDefault, QueueLimit, DestRefreshStart, DestRefreshDelay,
          RequestTimeoutAdjustment, ResponseTimeoutAdjustment, Scope,
          MonkeyLatency, MonkeyChaos, ApplicationName,
          RequestPidUses, RequestPidOptions, InfoPidUses, InfoPidOptions,
-         DuoMode, Hibernate, Reload]
+         DuoMode, Hibernate, Reload, AutomaticLoading]
         when not ((DuoMode =:= true) andalso
                   (InfoPidUses =/= infinity)) ->
             case services_validate_options_internal_checks(MonkeyLatency,
@@ -1371,15 +1388,17 @@ services_validate_options_internal(OptionsList) ->
                         hibernate =
                             Hibernate,
                         reload =
-                            Reload}};
+                            Reload,
+                        automatic_loading =
+                            AutomaticLoading}};
                 {error, _} = Error ->
                     Error
             end;
         [_, _, _, _, _, _, _,
-         _, _, _, _, _, _, _, _, _, _] ->
+         _, _, _, _, _, _, _, _, _, _, _] ->
             {error, {service_options_invalid, OptionsList}};
         [_, _, _, _, _, _, _,
-         _, _, _, _, _, _, _, _, _, _ | Extra] ->
+         _, _, _, _, _, _, _, _, _, _, _ | Extra] ->
             {error, {service_options_invalid, Extra}}
     end.
 
